# Mind_Your_Own_Query

./: .gitignore  ACADEMIC_AUDIT.md  BYTECODE_EVALUATION_SUMMARY.md  COMMIT_READY.md  COURSE_ALIGNMENT.md  FINAL_ACHIEVEMENTS.md  FINAL_QUALITY_REPORT.md  GITFLOW.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  MASTER_PLAN.md  MD_FILES_STATUS.md  NEXT_STEPS.md  OPCODES.md  PAPER_WRITING_GUIDE.md  PUBLICATION_GUIDE.md  README.md  RESEARCH_COMPARISON.md  RESEARCH_INSIGHTS.md  STRATEGIC_ANALYSIS.md  TODO.md  TOOL_COMPARISON.md  bytecode_evaluation_results.json  demo_taint.py  evaluate_bytecode_analyzer.py  extract_method_signatures.py  latest_evaluation_results.json  project_proposal.md  pyproject.toml  spotbugs_results.txt  test_cases.json
docs/: COMPREHENSIVE_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  QUICK_REFERENCE.md
jpamb-sqli/: README.md  add_missing_30_tests.ps1  generate_100_advanced_tests.ps1  generate_100_sqli_tests_simple.ps1  generate_200_sqli_tests.ps1  generate_200_sqli_tests_fixed.ps1  merge_test_cases.ps1  my_analyzer.py  split_advanced_tests.ps1  test_cases.backup_20251124_155415.json  test_cases.backup_before_adding_30.json  (+4 more)
sqli-test-suite/: .gitignore  COMPREHENSIVE_QUALITY_REPORT.md  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  README.md  my_analyzer.py  pyproject.toml  requirements.txt  test_analyzer.py
sqli-test-suite/src/main/java/jpamb/sqli/: DatabaseHelper.java  SQLi_CaseConversion.java  SQLi_ComplexNested.java  SQLi_DirectConcat.java  SQLi_HTTPSource.java  SQLi_IfElse.java  SQLi_LiteralMix.java  SQLi_LoginBypass.java  SQLi_Loop.java  SQLi_MultiConcat.java  SQLi_MultipleSources.java  SQLi_NestedConditions.java  SQLi_OrderBy.java  SQLi_PartialSanitization.java  SQLi_Replace.java  SQLi_SecondOrder.java  SQLi_SplitJoin.java  SQLi_StringBuffer.java  SQLi_StringBuilder.java  SQLi_StringBuilderMixed.java  SQLi_Substring.java  SQLi_Switch.java  SQLi_TimeBased.java  SQLi_Trim.java  SQLi_TryCatch.java  SQLi_Union.java
(+546 files in other folders)
