[project]
name = "jpamb-sqli-test-suite"
version = "1.0.0"
description = "SQL Injection test suite for JPAMB character-level taint analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "DTU Compute Group 4" }
]

keywords = ["security", "sql-injection", "taint-analysis", "testing"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DataAthleteChamp/Mind_Your_Own_Query"
Repository = "https://github.com/DataAthleteChamp/Mind_Your_Own_Query"
Issues = "https://github.com/DataAthleteChamp/Mind_Your_Own_Query/issues"

[project.scripts]
jpamb-analyze = "my_analyzer:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["my_analyzer", "test_runner", "test_analyzer"]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_analyzer", "test_runner", "test_analyzer"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
